# science-researcher-ralph

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MISSION.md  PLAN.md  README.md  progress.txt  prompt.md  pyproject.toml  ralph.sh  restore-docs.sh  rrd.json  rrd.json.example  skill.sh
.serena/: project.yml
docs/: DOCUMENTATION_PLAN.md  README.md
docs-baseline/: AGENTS.md  CLAUDE.md
docs/explanations/: architecture.md  evaluation-rubric.md
docs/how-to/: handle-rate-limits.md  multiple-projects.md  resume-research.md  switch-agents.md  use-insights.md
docs/reference/: cli.md  configuration.md  rrd-schema.md
docs/tutorials/: customizing-research.md  getting-started.md
ralph/: __init__.py  cli.py  config.py
ralph/commands/: __init__.py  create.py  interactive.py  list_cmd.py  reset.py  run.py  status.py
ralph/core/: __init__.py  agent_runner.py  research_loop.py  rrd_manager.py  skill_runner.py
ralph/models/: __init__.py  paper.py  rrd.py
ralph/ui/: __init__.py  console.py  live.py  progress.py  tables.py
researches/agentic-dessign-patterns-2026-01-14/: progress.txt  research-report.md  rrd.json
researches/auditable-media-streaming-integrity-2026-01-19/: product-ideas.json  progress.txt  research-report.md  rrd.json
researches/auditable-media-streaming-is-enabled-by--2026-01-19/: progress.txt
researches/blockchain-kvm-robot-operations-2026-01-15/: progress.txt  research-report.md  rrd.json
skills/rrd/: SKILL.md
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_models.py  test_models_paper.py  test_models_rrd.py
(+28 files in other folders)
